// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`built CLI end-to-end > renders the Obsidian-vault-style fixture (wikilinks, embeds, callouts, highlights) to self-contained HTML 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1" />
  <title>example-obsidian-whitepaper</title>
  <meta name="description" content="" />
  <style>
/**
 * Design tokens — CSS Custom Properties
 * The design token set that styles the generated documents.
 * 1rem = 16px. All spacing and sizing steps are multiples of 4px; radii use 2px, 4px, and 8px.
 *
 * Naming conventions:
 *   --color-{scale}-{stop}     e.g. --color-primary-600
 *   --spacing-{name}           e.g. --spacing-medium
 *   --font-size-{variant}-{viewport}  e.g. --font-size-hero-mobile
 *   --font-weight-{variant}    e.g. --font-weight-hero
 *   --shadow-{name}            e.g. --shadow-medium
 *   --radius-{name}            e.g. --radius-large
 *   --breakpoint-{name}        e.g. --breakpoint-desktop
 *   --z-{name}                 e.g. --z-highest
 *   --transition-{name}        e.g. --transition-fast
 */

:root {
  /* =========================================================
     COLORS — Primary (Teal / Cyan)
     ========================================================= */

  --color-primary-100: #f2fbfd;
  --color-primary-200: #e4f7fb;
  --color-primary-300: #c5edf6;
  --color-primary-400: #90dfef;
  --color-primary-500: #40b6ce;
  --color-primary-600: #0c7e96;
  --color-primary-700: #146076;
  --color-primary-800: #034e5e;
  --color-primary-900: #1c353b;
  --color-primary-1000: #111617;

  /* =========================================================
     COLORS — Secondary (Amber / Gold)
     ========================================================= */

  --color-secondary-100: #fefaf5;
  --color-secondary-200: #fdf4e2;
  --color-secondary-300: #ffe9bd;
  --color-secondary-400: #ffd88a;
  --color-secondary-500: #fec757;
  --color-secondary-600: #ffb733;
  --color-secondary-700: #e08a00;
  --color-secondary-800: #955d04;
  --color-secondary-900: #5c3900;
  --color-secondary-1000: #2b251c;

  /* =========================================================
     COLORS — Tertiary (Deep Blue)
     ========================================================= */

  --color-tertiary-100: #f6fbfd;
  --color-tertiary-200: #eaf5fb;
  --color-tertiary-300: #d6eaf4;
  --color-tertiary-400: #a2d0e6;
  --color-tertiary-500: #6bb9e1;
  --color-tertiary-600: #1c93ca;
  --color-tertiary-700: #066b9d;
  --color-tertiary-800: #03547d;
  --color-tertiary-900: #023e5c;
  --color-tertiary-1000: #012537;

  /* =========================================================
     COLORS — Special (Orange / Coral)
     Use for promotional CTAs and urgency signals only —
     not for status indicators.
     ========================================================= */

  --color-special-100: #fef8f5;
  --color-special-200: #fdeae2;
  --color-special-300: #fed0bd;
  --color-special-400: #fea17c;
  --color-special-500: #f47a4d;
  --color-special-600: #f15a22;
  --color-special-700: #c03d0c;
  --color-special-800: #902d09;
  --color-special-900: #431504;
  --color-special-1000: #220b02;

  /* =========================================================
     COLORS — AI (Purple)
     Exclusively for AI-generated content and AI-feature
     surfaces. Never for general decorative purple.
     ========================================================= */

  --color-ai-100: #f9f6fe;
  --color-ai-200: #ece3fc;
  --color-ai-300: #d9c9f3;
  --color-ai-400: #b99be8;
  --color-ai-500: #986ede;
  --color-ai-600: #7b44d4;
  --color-ai-700: #5c2da9;
  --color-ai-800: #431d81;
  --color-ai-900: #2b1353;
  --color-ai-1000: #0f071d;

  /* =========================================================
     COLORS — Neutral (Grey scale)
     000 = pure white, 1000 = near-black.
     ========================================================= */

  --color-neutral-000: #ffffff;
  --color-neutral-100: #f8fafb;
  --color-neutral-200: #f0f3f6;
  --color-neutral-300: #dbe0e6;
  --color-neutral-400: #cad1d8;
  --color-neutral-500: #b3bdc7;
  --color-neutral-600: #7c8a98;
  --color-neutral-700: #576575;
  --color-neutral-800: #3d4752;
  --color-neutral-900: #1b242d;
  --color-neutral-1000: #0f1419;

  /* =========================================================
     COLORS — Success (Green)
     ========================================================= */

  --color-success-100: #f1f9f3;
  --color-success-200: #e3f7ea;
  --color-success-300: #ccf0d7;
  --color-success-400: #9ce2b6;
  --color-success-500: #73c486;
  --color-success-600: #43a047;
  --color-success-700: #267e3c;
  --color-success-800: #006629;
  --color-success-900: #00471b;
  --color-success-1000: #002914;

  /* =========================================================
     COLORS — Error (Red)
     ========================================================= */

  --color-error-100: #fff5f5;
  --color-error-200: #ffe5e6;
  --color-error-300: #ffbdbf;
  --color-error-400: #ff8589;
  --color-error-500: #fd444a;
  --color-error-600: #e0191f;
  --color-error-700: #c20a10;
  --color-error-800: #a30005;
  --color-error-900: #610003;
  --color-error-1000: #290001;

  /* =========================================================
     COLORS — Alert (Amber)
     ========================================================= */

  --color-alert-100: #fcf5ee;
  --color-alert-200: #fceede;
  --color-alert-300: #fae0c2;
  --color-alert-400: #f5c284;
  --color-alert-500: #ffac4c;
  --color-alert-600: #f38e1b;
  --color-alert-700: #d66400;
  --color-alert-800: #b44a04;
  --color-alert-900: #5c3100;
  --color-alert-1000: #291600;

  /* =========================================================
     COLORS — Information (Teal — mirrors Primary exactly)
     Use information/* for status message contexts so intent
     survives a future palette change.
     ========================================================= */

  --color-information-100: #f2fbfd;
  --color-information-200: #e4f7fb;
  --color-information-300: #c5edf6;
  --color-information-400: #90dfef;
  --color-information-500: #40b6ce;
  --color-information-600: #0c7e96;
  --color-information-700: #146076;
  --color-information-800: #034e5e;
  --color-information-900: #1c353b;
  --color-information-1000: #111617;

  /* =========================================================
     COLORS — Semantic singles
     ========================================================= */

  --color-text: #1b242d;
  --color-background: #ffffff;

  /* =========================================================
     COLORS — Overlays
     050–200: hover tints, disabled states, zebra-striping.
     300–400: partial obscuring (drawers, panels).
     base:    full modal scrim.
     ========================================================= */

  --color-overlay: rgba(29, 38, 48, 0.5);
  --color-overlay-050: rgba(24, 77, 129, 0.03);
  --color-overlay-100: rgba(0, 48, 82, 0.06);
  --color-overlay-200: rgba(6, 49, 92, 0.15);
  --color-overlay-300: rgba(3, 35, 67, 0.3);
  --color-overlay-400: rgba(2, 33, 63, 0.5);

  /* =========================================================
     COLORS — App chrome: Sidebar
     Use only for sidebar/navigation surfaces.
     ========================================================= */

  --color-sidebar-background: #012c41;
  --color-sidebar-color: #ffffff;
  --color-sidebar-menu-item-background: #012c41;
  --color-sidebar-menu-item-hover-background: #03547d;
  --color-sidebar-menu-item-active-background: #023e5c;
  --color-sidebar-menu-item-color: #ffffff;
  --color-sidebar-contact-color: #ffffff;
  --color-sidebar-scrollbar-background: rgba(255, 255, 255, 0.2);
  --color-sidebar-skeleton-background: #012c41;
  --color-sidebar-skeleton-shimmer-background: #03547d;
  --color-sidebar-gradient-background: linear-gradient(
    180deg,
    rgba(1, 44, 65, 0) 0%,
    #012c41 100%
  );

  /* =========================================================
     COLORS — App chrome: Topbar
     Use only for topbar/navigation bar surfaces.
     ========================================================= */

  --color-topbar-background: #023e5c;
  --color-topbar-color: #ffffff;
  --color-topbar-border: #023e5c;
  --color-topbar-searchbar-background: #012c41;
  --color-topbar-searchbar-color: #ffffff;

  /* =========================================================
     SPACING
     Always use rem or named tokens — never raw px values.
     ========================================================= */

  --spacing-extra-extra-small: 0.25rem; /* 4px  */
  --spacing-extra-small: 0.5rem; /* 8px  */
  --spacing-small: 1rem; /* 16px */
  --spacing-medium: 1.5rem; /* 24px */
  --spacing-large: 2rem; /* 32px */
  --spacing-extra-large: 3rem; /* 48px */

  /* =========================================================
     TYPOGRAPHY — Font sizes (mobile)
     ========================================================= */

  --font-size-hero-mobile: 1.875rem; /* 30px */
  --font-size-feature-mobile: 1.5rem; /* 24px */
  --font-size-title-mobile: 1.25rem; /* 20px */
  --font-size-subtitle-mobile: 1rem; /* 16px */
  --font-size-surtitle-mobile: 0.875rem; /* 14px */
  --font-size-eyebrow-mobile: 0.6875rem; /* 11px */
  --font-size-medium-mobile: 1rem; /* 16px */
  --font-size-small-mobile: 0.875rem; /* 14px */
  --font-size-caption: 0.625rem; /* 10px — same on all viewports */

  /* =========================================================
     TYPOGRAPHY — Font sizes (desktop, ≥ 992px)
     ========================================================= */

  --font-size-hero-desktop: 1.5rem; /* 24px */
  --font-size-feature-desktop: 1.25rem; /* 20px */
  --font-size-title-desktop: 1rem; /* 16px */
  --font-size-subtitle-desktop: 0.875rem; /* 14px */
  --font-size-surtitle-desktop: 0.75rem; /* 12px */
  --font-size-eyebrow-desktop: 0.6875rem; /* 11px — same as mobile */
  --font-size-medium-desktop: 0.875rem; /* 14px */
  --font-size-small-desktop: 0.75rem; /* 12px */

  /* =========================================================
     TYPOGRAPHY — Font weights
     ========================================================= */

  --font-weight-hero: 600;
  --font-weight-feature: 600;
  --font-weight-title: 600;
  --font-weight-subtitle: 600;
  --font-weight-surtitle: 600;
  --font-weight-eyebrow: 700; /* only weight-700 variant */
  --font-weight-medium: 400;
  --font-weight-small: 400;
  /* caption has no weight constraint — no --font-weight-caption variable */

  /* =========================================================
     SHADOWS / ELEVATION
     Base color: rgb(3, 35, 67) — dark navy.
     Do not use on primary/800+ dark backgrounds (invisible).
     ========================================================= */

  --shadow-extra-small: 0px 1px 3px -1px rgba(3, 35, 67, 0.3);
  --shadow-small:
    0px 0px 2px rgba(3, 35, 67, 0.1), 0px 3px 6px -2px rgba(3, 35, 67, 0.25);
  --shadow-medium:
    0px 0px 2px rgba(3, 35, 67, 0.05), 0px 12px 24px -8px rgba(3, 35, 67, 0.25);
  --shadow-large:
    0px 0px 2px rgba(3, 35, 67, 0.05), 0px 24px 48px -16px rgba(3, 35, 67, 0.25);
  --shadow-extra-large:
    0px 0px 2px rgba(3, 35, 67, 0.05), 0px 40px 80px -26px rgba(3, 35, 67, 0.25);

  /* =========================================================
     BORDER RADIUS
     ========================================================= */

  --radius-small: 0.125rem; /* 2px */
  --radius-medium: 0.25rem; /* 4px */
  --radius-large: 0.5rem; /* 8px */

  /* =========================================================
     BREAKPOINTS
     CSS custom properties cannot be used in @media expressions — inline the
     rem value directly: @media (min-width: 62rem) not var(--breakpoint-desktop).
     ========================================================= */

  --breakpoint-tablet: 48rem; /* 768px  */
  --breakpoint-desktop: 62rem; /* 992px  */
  --breakpoint-large: 75rem; /* 1200px */

  /* =========================================================
     Z-INDEX — Semantic layers
     Always use these rather than hardcoded integers.
     ========================================================= */

  --z-lowest: 0;
  --z-lower: 100;
  --z-low: 200;
  --z-middle: 300;
  --z-high: 400;
  --z-higher: 500;
  --z-highest: 600;

  /* =========================================================
     Z-INDEX — Design system component assignments
     For reference only — not configurable, not for reuse.
     ========================================================= */

  --z-component-pagination: 1;
  --z-component-top-menu: 200;
  --z-component-checkout: 200;
  --z-component-drawer: 400;
  --z-component-dropdown: 500;
  --z-component-modal: 500;
  --z-component-popover: 550;
  --z-component-toast: 600;

  /* =========================================================
     TRANSITIONS
     Pair with an explicit easing curve (e.g. ease-in-out).
     Scope to specific properties rather than relying on
     the implicit "all" when animating multiple properties.
     ========================================================= */

  --transition-fast: 300ms; /* hover, focus state changes  */
  --transition-slow: 500ms; /* entrances and exits          */
}

:root {
  /* Structure voice: masthead, headings, TOC, labels, tables. */
  --font-sans:
    "Segoe UI Variable Text", "Segoe UI", system-ui, -apple-system, sans-serif;
  /* Reading voice: long-form body prose. High-quality system serifs only —
     output must stay self-contained, so no web fonts. */
  --font-serif:
    Charter, "Bitstream Charter", "Sitka Text", Cambria, Georgia, serif;
}

body {
  margin: 0;
  background: var(--color-background);
  color: var(--color-text);
  font-family: var(--font-sans);
  font-kerning: normal;
  line-height: 1.6;
}

.whitepaper-header {
  background: var(--color-tertiary-900);
  color: var(--color-neutral-000);
  padding: var(--spacing-large) var(--spacing-large) var(--spacing-medium);
  border-bottom: 4px solid var(--color-primary-600);
}

.whitepaper-header .logo {
  display: inline-flex;
  height: 2rem;
  margin-bottom: var(--spacing-medium);
}

.whitepaper-header .logo:empty {
  display: none;
}

.whitepaper-header .logo svg,
.whitepaper-header .logo img {
  height: 2rem;
  width: auto;
}

.header-eyebrow {
  display: flex;
  align-items: center;
  gap: var(--spacing-extra-small);
  margin-bottom: var(--spacing-extra-small);
}

.header-eyebrow:empty {
  display: none;
}

.header-eyebrow .eyebrow,
.header-eyebrow .doc-id {
  font-weight: 700;
  font-size: 0.75rem;
  letter-spacing: 0.06em;
  text-transform: uppercase;
  color: var(--color-primary-400);
}

.header-eyebrow .status-badge {
  font-weight: 700;
  font-size: 0.6875rem;
  letter-spacing: 0.06em;
  text-transform: uppercase;
  padding: 0.125rem var(--spacing-extra-small);
  border-radius: var(--radius-small);
  background: var(--color-secondary-600);
  color: var(--color-secondary-1000);
}

.whitepaper-header h1 {
  font-weight: 600;
  font-size: clamp(1.75rem, 1.25rem + 2.2vw, 2.5rem);
  line-height: 1.15;
  letter-spacing: -0.01em;
  text-wrap: balance;
  margin: 0 0 var(--spacing-small);
}

.whitepaper-header .subtitle {
  font-family: var(--font-serif);
  font-style: italic;
  font-weight: 400;
  font-size: 1.125rem;
  line-height: 1.5;
  color: var(--color-neutral-400);
  margin: 0 0 var(--spacing-medium);
}

.doc-info-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
  gap: var(--spacing-small);
  padding-top: var(--spacing-medium);
  border-top: 1px solid var(--color-tertiary-700);
}

.doc-info-item {
  display: flex;
  flex-direction: column;
  gap: 0.125rem;
}

.doc-info-item .label {
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-500);
}

.doc-info-item .value {
  font-size: 0.8125rem;
  color: var(--color-neutral-200);
}

/* Revision history: a collapsed-by-default disclosure at the top of the
   content column, speaking the same visual language as the appendix entries. */
.changelog {
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  margin: 0 0 var(--spacing-large);
  padding: 0 var(--spacing-medium);
  overflow: hidden;
  font-family: var(--font-sans);
}

.changelog summary {
  display: flex;
  align-items: center;
  gap: var(--spacing-extra-small);
  margin: 0 calc(-1 * var(--spacing-medium));
  padding: var(--spacing-small) var(--spacing-medium);
  cursor: pointer;
  font-weight: 600;
  font-size: 0.9375rem;
  list-style: none;
  transition: background var(--transition-fast) ease-in-out;
}

.changelog summary::-webkit-details-marker {
  display: none;
}

.changelog summary:hover {
  background: var(--color-primary-100);
}

.changelog summary:focus-visible {
  outline: 2px solid var(--color-primary-600);
  outline-offset: -2px;
}

.changelog summary::after {
  content: "";
  flex-shrink: 0;
  margin-left: auto;
  width: 0.4375rem;
  height: 0.4375rem;
  border-right: 2px solid var(--color-neutral-700);
  border-bottom: 2px solid var(--color-neutral-700);
  transform: translateY(-25%) rotate(45deg);
  transition: transform var(--transition-fast) ease-in-out;
}

.changelog[open] summary::after {
  transform: translateY(25%) rotate(225deg);
}

.changelog[open] summary {
  border-bottom: 1px solid var(--color-neutral-300);
}

.changelog table {
  border-collapse: collapse;
  width: 100%;
  margin: var(--spacing-small) 0;
  font-size: 0.9375rem;
  line-height: 1.5;
}

.changelog th,
.changelog td {
  padding: var(--spacing-extra-small) var(--spacing-small);
  text-align: left;
  border-bottom: 1px solid var(--color-neutral-200);
}

.changelog th {
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-600);
  border-bottom: 1px solid var(--color-neutral-300);
}

.changelog tbody tr:last-child td {
  border-bottom: none;
}

.whitepaper-layout {
  display: flex;
  align-items: flex-start;
  gap: var(--spacing-large);
  max-width: 72rem;
  margin: 0 auto;
  padding: 0 var(--spacing-large);
}

.whitepaper-toc {
  position: sticky;
  top: var(--spacing-large);
  flex: 0 0 14rem;
  width: 14rem;
  max-height: calc(100vh - 2 * var(--spacing-large));
  overflow-y: auto;
}

.whitepaper {
  flex: 1;
  min-width: 0;
  max-width: 44rem;
  padding: var(--spacing-extra-large) 0;
}

@media (max-width: 48rem) {
  .whitepaper-layout {
    flex-direction: column;
  }

  .whitepaper-toc {
    position: static;
    width: auto;
    max-height: none;
  }
}

.toc {
  padding: var(--spacing-medium) var(--spacing-large);
  margin: var(--spacing-small) 0;
}

.toc-appendix {
  margin-top: 0;
}

.toc .toc-label {
  font-weight: 600;
  margin: 0 0 var(--spacing-extra-small);
}

.toc ul {
  list-style: none;
  margin: 0;
  padding-left: 0;
}

.toc ul ul {
  padding-left: var(--spacing-medium);
  margin-top: var(--spacing-extra-extra-small);
}

.toc li {
  margin: var(--spacing-extra-extra-small) 0;
}

.toc a {
  display: inline-flex;
  gap: var(--spacing-extra-extra-small);
  color: var(--color-primary-600);
  text-decoration: none;
  font-size: 0.9rem;
  padding: 0.25rem var(--spacing-extra-small);
  border-radius: var(--radius-small);
  transition: background var(--transition-fast) ease-in-out;
}

.toc a:hover {
  background: var(--color-primary-100);
}

.toc-number {
  color: var(--color-neutral-600);
  font-variant-numeric: tabular-nums;
}

.whitepaper-content {
  font-family: var(--font-serif);
  font-size: 1.0625rem;
  line-height: 1.7;
}

.whitepaper-content p,
.whitepaper-content li {
  text-wrap: pretty;
}

.whitepaper-content h2,
.whitepaper-content h3,
.whitepaper-content h4 {
  font-family: var(--font-sans);
  line-height: 1.25;
  text-wrap: balance;
  scroll-margin-top: var(--spacing-large);
}

.whitepaper-content h2 {
  display: flex;
  align-items: center;
  gap: var(--spacing-small);
  font-weight: 600;
  font-size: 1.625rem;
  margin-top: var(--spacing-extra-large);
}

.whitepaper-content h2:not(:first-of-type) {
  border-top: 1px solid var(--color-neutral-300);
  padding-top: var(--spacing-large);
}

.whitepaper-content h3 {
  font-weight: 600;
  font-size: 1.3125rem;
  margin-top: var(--spacing-large);
}

.whitepaper-content h4 {
  font-weight: 600;
  font-size: 1.0625rem;
  margin-top: var(--spacing-large);
}

.whitepaper-content h2 .heading-number {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 1.75rem;
  height: 1.75rem;
  background: var(--color-primary-600);
  color: var(--color-neutral-000);
  font-size: 0.75rem;
  font-weight: 700;
  border-radius: var(--radius-medium);
}

.whitepaper-content h3 .heading-number,
.whitepaper-content h4 .heading-number {
  color: var(--color-neutral-600);
  font-weight: 400;
  margin-right: 0.25rem;
}

.whitepaper-content a {
  color: var(--color-primary-600);
}

.whitepaper-content code {
  background: var(--color-neutral-200);
  border-radius: var(--radius-small);
  padding: 0.1em 0.3em;
}

.whitepaper-content pre {
  background: var(--color-neutral-1000);
  color: var(--color-neutral-000);
  border-radius: var(--radius-medium);
  padding: var(--spacing-medium);
  overflow-x: auto;
}

.whitepaper-content pre code {
  background: none;
  padding: 0;
}

.whitepaper-content .code-block {
  margin: var(--spacing-large) 0;
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  overflow: hidden;
}

.whitepaper-content .code-block pre {
  margin: 0;
  border-radius: 0;
}

.whitepaper-content .code-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: var(--spacing-small);
  background: var(--color-neutral-200);
  padding: var(--spacing-extra-small) var(--spacing-small);
  border-bottom: 1px solid var(--color-neutral-300);
}

.whitepaper-content .code-header .lang {
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-600);
}

.whitepaper-content .code-header .filename {
  font-size: 0.75rem;
  color: var(--color-neutral-600);
}

/* Syntax highlighting (highlight.js classes, emitted at build time).
   Restrained four-hue theme on the dark pre surface: teal keywords, amber
   literals, blue names/types, gray comments — all light-series tokens that
   clear 4.5:1 on neutral-1000. */
.whitepaper-content .hljs-comment,
.whitepaper-content .hljs-quote {
  color: var(--color-neutral-500);
  font-style: italic;
}

.whitepaper-content .hljs-keyword,
.whitepaper-content .hljs-selector-tag,
.whitepaper-content .hljs-literal,
.whitepaper-content .hljs-doctag {
  color: var(--color-primary-400);
}

.whitepaper-content .hljs-string,
.whitepaper-content .hljs-regexp,
.whitepaper-content .hljs-addition {
  color: var(--color-secondary-400);
}

.whitepaper-content .hljs-number,
.whitepaper-content .hljs-symbol,
.whitepaper-content .hljs-bullet,
.whitepaper-content .hljs-meta {
  color: var(--color-secondary-500);
}

.whitepaper-content .hljs-title,
.whitepaper-content .hljs-section,
.whitepaper-content .hljs-name {
  color: var(--color-tertiary-400);
}

.whitepaper-content .hljs-attr,
.whitepaper-content .hljs-attribute,
.whitepaper-content .hljs-variable,
.whitepaper-content .hljs-template-variable,
.whitepaper-content .hljs-type,
.whitepaper-content .hljs-built_in,
.whitepaper-content .hljs-selector-class,
.whitepaper-content .hljs-selector-id {
  color: var(--color-tertiary-500);
}

.whitepaper-content .hljs-deletion {
  color: var(--color-error-400);
}

.whitepaper-content .hljs-emphasis {
  font-style: italic;
}

.whitepaper-content .hljs-strong {
  font-weight: 600;
}

.whitepaper-content blockquote {
  border-left: 1px solid var(--color-neutral-400);
  margin: var(--spacing-large) 0;
  padding-left: var(--spacing-medium);
  font-style: italic;
  color: var(--color-neutral-700);
}

.whitepaper-content .alert {
  border: 1px solid;
  border-radius: var(--radius-medium);
  padding: var(--spacing-medium) var(--spacing-large);
  margin: var(--spacing-large) 0;
}

.whitepaper-content .alert p {
  margin: 0;
}

.whitepaper-content .alert p + p {
  margin-top: var(--spacing-extra-small);
}

/* Outranks the \`.alert p { margin: 0 }\` reset above without !important. */
.whitepaper-content .alert .alert-title {
  font-family: var(--font-sans);
  font-weight: 600;
  margin-bottom: var(--spacing-extra-small);
}

.whitepaper-content .alert-info {
  background: var(--color-information-100);
  border-color: var(--color-information-300);
}

.whitepaper-content .alert-info .alert-title {
  color: var(--color-information-800);
}

.whitepaper-content .alert-success {
  background: var(--color-success-100);
  border-color: var(--color-success-300);
}

.whitepaper-content .alert-success .alert-title {
  color: var(--color-success-800);
}

.whitepaper-content .alert-warn {
  background: var(--color-alert-100);
  border-color: var(--color-alert-300);
}

.whitepaper-content .alert-warn .alert-title {
  color: var(--color-alert-800);
}

.whitepaper-content .alert-error {
  background: var(--color-error-100);
  border-color: var(--color-error-300);
}

.whitepaper-content .alert-error .alert-title {
  color: var(--color-error-800);
}

.whitepaper-content table {
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
  margin: var(--spacing-large) 0;
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  overflow: hidden;
  font-family: var(--font-sans);
  font-size: 0.9375rem;
  line-height: 1.5;
}

.whitepaper-content th,
.whitepaper-content td {
  padding: var(--spacing-extra-small) var(--spacing-small);
  text-align: left;
  border-bottom: 1px solid var(--color-neutral-200);
}

.whitepaper-content td {
  font-variant-numeric: tabular-nums;
}

.whitepaper-content tbody tr:last-child td {
  border-bottom: none;
}

.whitepaper-content tbody tr:hover td {
  background: var(--color-neutral-100);
}

.whitepaper-content th {
  background: var(--color-neutral-200);
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-600);
}

.whitepaper-footer {
  text-align: center;
  color: var(--color-neutral-600);
  font-size: 0.8rem;
  padding: var(--spacing-large);
  border-top: 1px solid var(--color-neutral-300);
}

.mermaid-wrapper {
  margin: var(--spacing-large) 0;
  padding: var(--spacing-medium);
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  cursor: zoom-in;
  text-align: center;
}

.mermaid-wrapper .mermaid svg {
  max-width: 100%;
  height: auto;
}

.lightbox-overlay {
  display: none;
  position: fixed;
  inset: 0;
  z-index: var(--z-component-modal);
  background: var(--color-overlay);
  align-items: center;
  justify-content: center;
  padding: var(--spacing-large);
  cursor: zoom-out;
}

.lightbox-overlay.open {
  display: flex;
}

.lightbox-content {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 90vw;
  max-height: 90vh;
  overflow: auto;
  background: var(--color-neutral-000);
  border-radius: var(--radius-medium);
  padding: var(--spacing-medium);
}

.lightbox-overlay .lightbox-content svg {
  display: block;
  width: 100%;
  height: auto;
}

.appendix-entry {
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  margin: var(--spacing-medium) 0;
  padding: 0 var(--spacing-medium);
  overflow: hidden;
}

.appendix-entry summary {
  display: flex;
  align-items: center;
  gap: var(--spacing-extra-small);
  margin: 0 calc(-1 * var(--spacing-medium));
  padding: var(--spacing-small) var(--spacing-medium);
  cursor: pointer;
  font-family: var(--font-sans);
  font-weight: 600;
  list-style: none;
  transition: background var(--transition-fast) ease-in-out;
}

.appendix-entry summary::-webkit-details-marker {
  display: none;
}

.appendix-entry summary:hover {
  background: var(--color-primary-100);
}

.appendix-entry summary:focus-visible {
  outline: 2px solid var(--color-primary-600);
  outline-offset: -2px;
}

.appendix-entry summary::after {
  content: "";
  flex-shrink: 0;
  margin-left: auto;
  width: 0.4375rem;
  height: 0.4375rem;
  border-right: 2px solid var(--color-neutral-700);
  border-bottom: 2px solid var(--color-neutral-700);
  transform: translateY(-25%) rotate(45deg);
  transition: transform var(--transition-fast) ease-in-out;
}

.appendix-entry[open] summary::after {
  transform: translateY(25%) rotate(225deg);
}

.appendix-entry summary .heading-number {
  color: var(--color-primary-600);
}

.appendix-entry[open] summary {
  border-bottom: 1px solid var(--color-neutral-300);
  margin-bottom: var(--spacing-small);
}

.appendix-entry[open] {
  padding-bottom: var(--spacing-small);
}

.appendix-entry > :last-child {
  margin-bottom: 0;
}

.lightbox-close {
  position: absolute;
  top: var(--spacing-large);
  right: var(--spacing-large);
  background: none;
  border: none;
  color: var(--color-neutral-000);
  font-size: 2rem;
  line-height: 1;
  cursor: pointer;
}

@media print {
  .whitepaper-toc,
  .lightbox-overlay {
    display: none;
  }
}

@media (prefers-reduced-motion: reduce) {
  .toc a,
  .appendix-entry summary,
  .appendix-entry summary::after,
  .changelog summary,
  .changelog summary::after {
    transition: none;
  }
}

  </style>
</head>
<body>
  <header class="whitepaper-header">
    <span class="logo"></span>
    <div class="header-eyebrow"><span class="eyebrow">Whitepaper</span></div>
    <h1>example-obsidian-whitepaper</h1>
    <p class="subtitle"></p>
    
  </header>

  <div class="whitepaper-layout">
    <aside class="whitepaper-toc"><nav class="toc"><p class="toc-label">Contents</p><ul><li><a href="#overview"><span class="toc-number">1</span> Overview</a></li></ul></nav></aside>

    <main class="whitepaper">
      <details class="changelog"><summary>Revision History</summary><table><thead><tr><th>Version</th><th>Date</th><th>Description</th></tr></thead><tbody><tr><td>1.0</td><td>14 July 2026</td><td>Initial version.</td></tr></tbody></table></details>
      <article class="whitepaper-content">
        <h2 id="overview"><span class="heading-number">1. </span>Overview</h2>
<p>See Related Note and the relevant section for background.</p>
<p><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII=" alt="example-diagram.png" width="300"></p>
<div class="alert alert-info">
<p class="alert-title">Summary</p>
<p>A summary callout using an Obsidian-only alias.</p>
</div>
<p>This is <mark>important</mark> and has a comment.  It also has a block ref.</p>
<table>
<thead>
<tr>
<th>Term</th>
<th>Related</th>
</tr>
</thead>
<tbody>
<tr>
<td>Plain</td>
<td>Related Note</td>
</tr>
<tr>
<td>Aliased</td>
<td>Alias</td>
</tr>
</tbody>
</table>
      </article>
    </main>
  </div>

  <footer class="whitepaper-footer">
    <p>Built with mashay</p>
  </footer>

  <div id="mermaid-lightbox" class="lightbox-overlay">
    <button type="button" class="lightbox-close" aria-label="Close">&times;</button>
    <div class="lightbox-content"></div>
  </div>

  
  <script>
    document.addEventListener("click", function (e) {
      var wrapper = e.target.closest(".mermaid-wrapper");
      var overlay = document.getElementById("mermaid-lightbox");
      if (wrapper) {
        var svg = wrapper.querySelector("svg");
        if (svg) {
          var clone = svg.cloneNode(true);
          clone.removeAttribute("width");
          clone.removeAttribute("height");
          clone.removeAttribute("style");
          clone.style.width = "100%";
          clone.style.height = "auto";
          var content = overlay.querySelector(".lightbox-content");
          content.innerHTML = "";
          content.appendChild(clone);
          overlay.classList.add("open");
        }
        return;
      }
      if (e.target.closest(".lightbox-close") || e.target === overlay) {
        overlay.classList.remove("open");
      }
    });
    document.addEventListener("keydown", function (e) {
      if (e.key === "Escape") {
        document.getElementById("mermaid-lightbox").classList.remove("open");
      }
    });
  </script>
</body>
</html>
"
`;

exports[`built CLI end-to-end > renders the example whitepaper fixture to a self-contained HTML file 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1" />
  <title>Streamlining Property Due Diligence</title>
  <meta name="description" content="How automation reduces settlement risk for conveyancers." />
  <style>
/**
 * Design tokens — CSS Custom Properties
 * The design token set that styles the generated documents.
 * 1rem = 16px. All spacing and sizing steps are multiples of 4px; radii use 2px, 4px, and 8px.
 *
 * Naming conventions:
 *   --color-{scale}-{stop}     e.g. --color-primary-600
 *   --spacing-{name}           e.g. --spacing-medium
 *   --font-size-{variant}-{viewport}  e.g. --font-size-hero-mobile
 *   --font-weight-{variant}    e.g. --font-weight-hero
 *   --shadow-{name}            e.g. --shadow-medium
 *   --radius-{name}            e.g. --radius-large
 *   --breakpoint-{name}        e.g. --breakpoint-desktop
 *   --z-{name}                 e.g. --z-highest
 *   --transition-{name}        e.g. --transition-fast
 */

:root {
  /* =========================================================
     COLORS — Primary (Teal / Cyan)
     ========================================================= */

  --color-primary-100: #f2fbfd;
  --color-primary-200: #e4f7fb;
  --color-primary-300: #c5edf6;
  --color-primary-400: #90dfef;
  --color-primary-500: #40b6ce;
  --color-primary-600: #0c7e96;
  --color-primary-700: #146076;
  --color-primary-800: #034e5e;
  --color-primary-900: #1c353b;
  --color-primary-1000: #111617;

  /* =========================================================
     COLORS — Secondary (Amber / Gold)
     ========================================================= */

  --color-secondary-100: #fefaf5;
  --color-secondary-200: #fdf4e2;
  --color-secondary-300: #ffe9bd;
  --color-secondary-400: #ffd88a;
  --color-secondary-500: #fec757;
  --color-secondary-600: #ffb733;
  --color-secondary-700: #e08a00;
  --color-secondary-800: #955d04;
  --color-secondary-900: #5c3900;
  --color-secondary-1000: #2b251c;

  /* =========================================================
     COLORS — Tertiary (Deep Blue)
     ========================================================= */

  --color-tertiary-100: #f6fbfd;
  --color-tertiary-200: #eaf5fb;
  --color-tertiary-300: #d6eaf4;
  --color-tertiary-400: #a2d0e6;
  --color-tertiary-500: #6bb9e1;
  --color-tertiary-600: #1c93ca;
  --color-tertiary-700: #066b9d;
  --color-tertiary-800: #03547d;
  --color-tertiary-900: #023e5c;
  --color-tertiary-1000: #012537;

  /* =========================================================
     COLORS — Special (Orange / Coral)
     Use for promotional CTAs and urgency signals only —
     not for status indicators.
     ========================================================= */

  --color-special-100: #fef8f5;
  --color-special-200: #fdeae2;
  --color-special-300: #fed0bd;
  --color-special-400: #fea17c;
  --color-special-500: #f47a4d;
  --color-special-600: #f15a22;
  --color-special-700: #c03d0c;
  --color-special-800: #902d09;
  --color-special-900: #431504;
  --color-special-1000: #220b02;

  /* =========================================================
     COLORS — AI (Purple)
     Exclusively for AI-generated content and AI-feature
     surfaces. Never for general decorative purple.
     ========================================================= */

  --color-ai-100: #f9f6fe;
  --color-ai-200: #ece3fc;
  --color-ai-300: #d9c9f3;
  --color-ai-400: #b99be8;
  --color-ai-500: #986ede;
  --color-ai-600: #7b44d4;
  --color-ai-700: #5c2da9;
  --color-ai-800: #431d81;
  --color-ai-900: #2b1353;
  --color-ai-1000: #0f071d;

  /* =========================================================
     COLORS — Neutral (Grey scale)
     000 = pure white, 1000 = near-black.
     ========================================================= */

  --color-neutral-000: #ffffff;
  --color-neutral-100: #f8fafb;
  --color-neutral-200: #f0f3f6;
  --color-neutral-300: #dbe0e6;
  --color-neutral-400: #cad1d8;
  --color-neutral-500: #b3bdc7;
  --color-neutral-600: #7c8a98;
  --color-neutral-700: #576575;
  --color-neutral-800: #3d4752;
  --color-neutral-900: #1b242d;
  --color-neutral-1000: #0f1419;

  /* =========================================================
     COLORS — Success (Green)
     ========================================================= */

  --color-success-100: #f1f9f3;
  --color-success-200: #e3f7ea;
  --color-success-300: #ccf0d7;
  --color-success-400: #9ce2b6;
  --color-success-500: #73c486;
  --color-success-600: #43a047;
  --color-success-700: #267e3c;
  --color-success-800: #006629;
  --color-success-900: #00471b;
  --color-success-1000: #002914;

  /* =========================================================
     COLORS — Error (Red)
     ========================================================= */

  --color-error-100: #fff5f5;
  --color-error-200: #ffe5e6;
  --color-error-300: #ffbdbf;
  --color-error-400: #ff8589;
  --color-error-500: #fd444a;
  --color-error-600: #e0191f;
  --color-error-700: #c20a10;
  --color-error-800: #a30005;
  --color-error-900: #610003;
  --color-error-1000: #290001;

  /* =========================================================
     COLORS — Alert (Amber)
     ========================================================= */

  --color-alert-100: #fcf5ee;
  --color-alert-200: #fceede;
  --color-alert-300: #fae0c2;
  --color-alert-400: #f5c284;
  --color-alert-500: #ffac4c;
  --color-alert-600: #f38e1b;
  --color-alert-700: #d66400;
  --color-alert-800: #b44a04;
  --color-alert-900: #5c3100;
  --color-alert-1000: #291600;

  /* =========================================================
     COLORS — Information (Teal — mirrors Primary exactly)
     Use information/* for status message contexts so intent
     survives a future palette change.
     ========================================================= */

  --color-information-100: #f2fbfd;
  --color-information-200: #e4f7fb;
  --color-information-300: #c5edf6;
  --color-information-400: #90dfef;
  --color-information-500: #40b6ce;
  --color-information-600: #0c7e96;
  --color-information-700: #146076;
  --color-information-800: #034e5e;
  --color-information-900: #1c353b;
  --color-information-1000: #111617;

  /* =========================================================
     COLORS — Semantic singles
     ========================================================= */

  --color-text: #1b242d;
  --color-background: #ffffff;

  /* =========================================================
     COLORS — Overlays
     050–200: hover tints, disabled states, zebra-striping.
     300–400: partial obscuring (drawers, panels).
     base:    full modal scrim.
     ========================================================= */

  --color-overlay: rgba(29, 38, 48, 0.5);
  --color-overlay-050: rgba(24, 77, 129, 0.03);
  --color-overlay-100: rgba(0, 48, 82, 0.06);
  --color-overlay-200: rgba(6, 49, 92, 0.15);
  --color-overlay-300: rgba(3, 35, 67, 0.3);
  --color-overlay-400: rgba(2, 33, 63, 0.5);

  /* =========================================================
     COLORS — App chrome: Sidebar
     Use only for sidebar/navigation surfaces.
     ========================================================= */

  --color-sidebar-background: #012c41;
  --color-sidebar-color: #ffffff;
  --color-sidebar-menu-item-background: #012c41;
  --color-sidebar-menu-item-hover-background: #03547d;
  --color-sidebar-menu-item-active-background: #023e5c;
  --color-sidebar-menu-item-color: #ffffff;
  --color-sidebar-contact-color: #ffffff;
  --color-sidebar-scrollbar-background: rgba(255, 255, 255, 0.2);
  --color-sidebar-skeleton-background: #012c41;
  --color-sidebar-skeleton-shimmer-background: #03547d;
  --color-sidebar-gradient-background: linear-gradient(
    180deg,
    rgba(1, 44, 65, 0) 0%,
    #012c41 100%
  );

  /* =========================================================
     COLORS — App chrome: Topbar
     Use only for topbar/navigation bar surfaces.
     ========================================================= */

  --color-topbar-background: #023e5c;
  --color-topbar-color: #ffffff;
  --color-topbar-border: #023e5c;
  --color-topbar-searchbar-background: #012c41;
  --color-topbar-searchbar-color: #ffffff;

  /* =========================================================
     SPACING
     Always use rem or named tokens — never raw px values.
     ========================================================= */

  --spacing-extra-extra-small: 0.25rem; /* 4px  */
  --spacing-extra-small: 0.5rem; /* 8px  */
  --spacing-small: 1rem; /* 16px */
  --spacing-medium: 1.5rem; /* 24px */
  --spacing-large: 2rem; /* 32px */
  --spacing-extra-large: 3rem; /* 48px */

  /* =========================================================
     TYPOGRAPHY — Font sizes (mobile)
     ========================================================= */

  --font-size-hero-mobile: 1.875rem; /* 30px */
  --font-size-feature-mobile: 1.5rem; /* 24px */
  --font-size-title-mobile: 1.25rem; /* 20px */
  --font-size-subtitle-mobile: 1rem; /* 16px */
  --font-size-surtitle-mobile: 0.875rem; /* 14px */
  --font-size-eyebrow-mobile: 0.6875rem; /* 11px */
  --font-size-medium-mobile: 1rem; /* 16px */
  --font-size-small-mobile: 0.875rem; /* 14px */
  --font-size-caption: 0.625rem; /* 10px — same on all viewports */

  /* =========================================================
     TYPOGRAPHY — Font sizes (desktop, ≥ 992px)
     ========================================================= */

  --font-size-hero-desktop: 1.5rem; /* 24px */
  --font-size-feature-desktop: 1.25rem; /* 20px */
  --font-size-title-desktop: 1rem; /* 16px */
  --font-size-subtitle-desktop: 0.875rem; /* 14px */
  --font-size-surtitle-desktop: 0.75rem; /* 12px */
  --font-size-eyebrow-desktop: 0.6875rem; /* 11px — same as mobile */
  --font-size-medium-desktop: 0.875rem; /* 14px */
  --font-size-small-desktop: 0.75rem; /* 12px */

  /* =========================================================
     TYPOGRAPHY — Font weights
     ========================================================= */

  --font-weight-hero: 600;
  --font-weight-feature: 600;
  --font-weight-title: 600;
  --font-weight-subtitle: 600;
  --font-weight-surtitle: 600;
  --font-weight-eyebrow: 700; /* only weight-700 variant */
  --font-weight-medium: 400;
  --font-weight-small: 400;
  /* caption has no weight constraint — no --font-weight-caption variable */

  /* =========================================================
     SHADOWS / ELEVATION
     Base color: rgb(3, 35, 67) — dark navy.
     Do not use on primary/800+ dark backgrounds (invisible).
     ========================================================= */

  --shadow-extra-small: 0px 1px 3px -1px rgba(3, 35, 67, 0.3);
  --shadow-small:
    0px 0px 2px rgba(3, 35, 67, 0.1), 0px 3px 6px -2px rgba(3, 35, 67, 0.25);
  --shadow-medium:
    0px 0px 2px rgba(3, 35, 67, 0.05), 0px 12px 24px -8px rgba(3, 35, 67, 0.25);
  --shadow-large:
    0px 0px 2px rgba(3, 35, 67, 0.05), 0px 24px 48px -16px rgba(3, 35, 67, 0.25);
  --shadow-extra-large:
    0px 0px 2px rgba(3, 35, 67, 0.05), 0px 40px 80px -26px rgba(3, 35, 67, 0.25);

  /* =========================================================
     BORDER RADIUS
     ========================================================= */

  --radius-small: 0.125rem; /* 2px */
  --radius-medium: 0.25rem; /* 4px */
  --radius-large: 0.5rem; /* 8px */

  /* =========================================================
     BREAKPOINTS
     CSS custom properties cannot be used in @media expressions — inline the
     rem value directly: @media (min-width: 62rem) not var(--breakpoint-desktop).
     ========================================================= */

  --breakpoint-tablet: 48rem; /* 768px  */
  --breakpoint-desktop: 62rem; /* 992px  */
  --breakpoint-large: 75rem; /* 1200px */

  /* =========================================================
     Z-INDEX — Semantic layers
     Always use these rather than hardcoded integers.
     ========================================================= */

  --z-lowest: 0;
  --z-lower: 100;
  --z-low: 200;
  --z-middle: 300;
  --z-high: 400;
  --z-higher: 500;
  --z-highest: 600;

  /* =========================================================
     Z-INDEX — Design system component assignments
     For reference only — not configurable, not for reuse.
     ========================================================= */

  --z-component-pagination: 1;
  --z-component-top-menu: 200;
  --z-component-checkout: 200;
  --z-component-drawer: 400;
  --z-component-dropdown: 500;
  --z-component-modal: 500;
  --z-component-popover: 550;
  --z-component-toast: 600;

  /* =========================================================
     TRANSITIONS
     Pair with an explicit easing curve (e.g. ease-in-out).
     Scope to specific properties rather than relying on
     the implicit "all" when animating multiple properties.
     ========================================================= */

  --transition-fast: 300ms; /* hover, focus state changes  */
  --transition-slow: 500ms; /* entrances and exits          */
}

:root {
  /* Structure voice: masthead, headings, TOC, labels, tables. */
  --font-sans:
    "Segoe UI Variable Text", "Segoe UI", system-ui, -apple-system, sans-serif;
  /* Reading voice: long-form body prose. High-quality system serifs only —
     output must stay self-contained, so no web fonts. */
  --font-serif:
    Charter, "Bitstream Charter", "Sitka Text", Cambria, Georgia, serif;
}

body {
  margin: 0;
  background: var(--color-background);
  color: var(--color-text);
  font-family: var(--font-sans);
  font-kerning: normal;
  line-height: 1.6;
}

.whitepaper-header {
  background: var(--color-tertiary-900);
  color: var(--color-neutral-000);
  padding: var(--spacing-large) var(--spacing-large) var(--spacing-medium);
  border-bottom: 4px solid var(--color-primary-600);
}

.whitepaper-header .logo {
  display: inline-flex;
  height: 2rem;
  margin-bottom: var(--spacing-medium);
}

.whitepaper-header .logo:empty {
  display: none;
}

.whitepaper-header .logo svg,
.whitepaper-header .logo img {
  height: 2rem;
  width: auto;
}

.header-eyebrow {
  display: flex;
  align-items: center;
  gap: var(--spacing-extra-small);
  margin-bottom: var(--spacing-extra-small);
}

.header-eyebrow:empty {
  display: none;
}

.header-eyebrow .eyebrow,
.header-eyebrow .doc-id {
  font-weight: 700;
  font-size: 0.75rem;
  letter-spacing: 0.06em;
  text-transform: uppercase;
  color: var(--color-primary-400);
}

.header-eyebrow .status-badge {
  font-weight: 700;
  font-size: 0.6875rem;
  letter-spacing: 0.06em;
  text-transform: uppercase;
  padding: 0.125rem var(--spacing-extra-small);
  border-radius: var(--radius-small);
  background: var(--color-secondary-600);
  color: var(--color-secondary-1000);
}

.whitepaper-header h1 {
  font-weight: 600;
  font-size: clamp(1.75rem, 1.25rem + 2.2vw, 2.5rem);
  line-height: 1.15;
  letter-spacing: -0.01em;
  text-wrap: balance;
  margin: 0 0 var(--spacing-small);
}

.whitepaper-header .subtitle {
  font-family: var(--font-serif);
  font-style: italic;
  font-weight: 400;
  font-size: 1.125rem;
  line-height: 1.5;
  color: var(--color-neutral-400);
  margin: 0 0 var(--spacing-medium);
}

.doc-info-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
  gap: var(--spacing-small);
  padding-top: var(--spacing-medium);
  border-top: 1px solid var(--color-tertiary-700);
}

.doc-info-item {
  display: flex;
  flex-direction: column;
  gap: 0.125rem;
}

.doc-info-item .label {
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-500);
}

.doc-info-item .value {
  font-size: 0.8125rem;
  color: var(--color-neutral-200);
}

/* Revision history: a collapsed-by-default disclosure at the top of the
   content column, speaking the same visual language as the appendix entries. */
.changelog {
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  margin: 0 0 var(--spacing-large);
  padding: 0 var(--spacing-medium);
  overflow: hidden;
  font-family: var(--font-sans);
}

.changelog summary {
  display: flex;
  align-items: center;
  gap: var(--spacing-extra-small);
  margin: 0 calc(-1 * var(--spacing-medium));
  padding: var(--spacing-small) var(--spacing-medium);
  cursor: pointer;
  font-weight: 600;
  font-size: 0.9375rem;
  list-style: none;
  transition: background var(--transition-fast) ease-in-out;
}

.changelog summary::-webkit-details-marker {
  display: none;
}

.changelog summary:hover {
  background: var(--color-primary-100);
}

.changelog summary:focus-visible {
  outline: 2px solid var(--color-primary-600);
  outline-offset: -2px;
}

.changelog summary::after {
  content: "";
  flex-shrink: 0;
  margin-left: auto;
  width: 0.4375rem;
  height: 0.4375rem;
  border-right: 2px solid var(--color-neutral-700);
  border-bottom: 2px solid var(--color-neutral-700);
  transform: translateY(-25%) rotate(45deg);
  transition: transform var(--transition-fast) ease-in-out;
}

.changelog[open] summary::after {
  transform: translateY(25%) rotate(225deg);
}

.changelog[open] summary {
  border-bottom: 1px solid var(--color-neutral-300);
}

.changelog table {
  border-collapse: collapse;
  width: 100%;
  margin: var(--spacing-small) 0;
  font-size: 0.9375rem;
  line-height: 1.5;
}

.changelog th,
.changelog td {
  padding: var(--spacing-extra-small) var(--spacing-small);
  text-align: left;
  border-bottom: 1px solid var(--color-neutral-200);
}

.changelog th {
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-600);
  border-bottom: 1px solid var(--color-neutral-300);
}

.changelog tbody tr:last-child td {
  border-bottom: none;
}

.whitepaper-layout {
  display: flex;
  align-items: flex-start;
  gap: var(--spacing-large);
  max-width: 72rem;
  margin: 0 auto;
  padding: 0 var(--spacing-large);
}

.whitepaper-toc {
  position: sticky;
  top: var(--spacing-large);
  flex: 0 0 14rem;
  width: 14rem;
  max-height: calc(100vh - 2 * var(--spacing-large));
  overflow-y: auto;
}

.whitepaper {
  flex: 1;
  min-width: 0;
  max-width: 44rem;
  padding: var(--spacing-extra-large) 0;
}

@media (max-width: 48rem) {
  .whitepaper-layout {
    flex-direction: column;
  }

  .whitepaper-toc {
    position: static;
    width: auto;
    max-height: none;
  }
}

.toc {
  padding: var(--spacing-medium) var(--spacing-large);
  margin: var(--spacing-small) 0;
}

.toc-appendix {
  margin-top: 0;
}

.toc .toc-label {
  font-weight: 600;
  margin: 0 0 var(--spacing-extra-small);
}

.toc ul {
  list-style: none;
  margin: 0;
  padding-left: 0;
}

.toc ul ul {
  padding-left: var(--spacing-medium);
  margin-top: var(--spacing-extra-extra-small);
}

.toc li {
  margin: var(--spacing-extra-extra-small) 0;
}

.toc a {
  display: inline-flex;
  gap: var(--spacing-extra-extra-small);
  color: var(--color-primary-600);
  text-decoration: none;
  font-size: 0.9rem;
  padding: 0.25rem var(--spacing-extra-small);
  border-radius: var(--radius-small);
  transition: background var(--transition-fast) ease-in-out;
}

.toc a:hover {
  background: var(--color-primary-100);
}

.toc-number {
  color: var(--color-neutral-600);
  font-variant-numeric: tabular-nums;
}

.whitepaper-content {
  font-family: var(--font-serif);
  font-size: 1.0625rem;
  line-height: 1.7;
}

.whitepaper-content p,
.whitepaper-content li {
  text-wrap: pretty;
}

.whitepaper-content h2,
.whitepaper-content h3,
.whitepaper-content h4 {
  font-family: var(--font-sans);
  line-height: 1.25;
  text-wrap: balance;
  scroll-margin-top: var(--spacing-large);
}

.whitepaper-content h2 {
  display: flex;
  align-items: center;
  gap: var(--spacing-small);
  font-weight: 600;
  font-size: 1.625rem;
  margin-top: var(--spacing-extra-large);
}

.whitepaper-content h2:not(:first-of-type) {
  border-top: 1px solid var(--color-neutral-300);
  padding-top: var(--spacing-large);
}

.whitepaper-content h3 {
  font-weight: 600;
  font-size: 1.3125rem;
  margin-top: var(--spacing-large);
}

.whitepaper-content h4 {
  font-weight: 600;
  font-size: 1.0625rem;
  margin-top: var(--spacing-large);
}

.whitepaper-content h2 .heading-number {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 1.75rem;
  height: 1.75rem;
  background: var(--color-primary-600);
  color: var(--color-neutral-000);
  font-size: 0.75rem;
  font-weight: 700;
  border-radius: var(--radius-medium);
}

.whitepaper-content h3 .heading-number,
.whitepaper-content h4 .heading-number {
  color: var(--color-neutral-600);
  font-weight: 400;
  margin-right: 0.25rem;
}

.whitepaper-content a {
  color: var(--color-primary-600);
}

.whitepaper-content code {
  background: var(--color-neutral-200);
  border-radius: var(--radius-small);
  padding: 0.1em 0.3em;
}

.whitepaper-content pre {
  background: var(--color-neutral-1000);
  color: var(--color-neutral-000);
  border-radius: var(--radius-medium);
  padding: var(--spacing-medium);
  overflow-x: auto;
}

.whitepaper-content pre code {
  background: none;
  padding: 0;
}

.whitepaper-content .code-block {
  margin: var(--spacing-large) 0;
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  overflow: hidden;
}

.whitepaper-content .code-block pre {
  margin: 0;
  border-radius: 0;
}

.whitepaper-content .code-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: var(--spacing-small);
  background: var(--color-neutral-200);
  padding: var(--spacing-extra-small) var(--spacing-small);
  border-bottom: 1px solid var(--color-neutral-300);
}

.whitepaper-content .code-header .lang {
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-600);
}

.whitepaper-content .code-header .filename {
  font-size: 0.75rem;
  color: var(--color-neutral-600);
}

/* Syntax highlighting (highlight.js classes, emitted at build time).
   Restrained four-hue theme on the dark pre surface: teal keywords, amber
   literals, blue names/types, gray comments — all light-series tokens that
   clear 4.5:1 on neutral-1000. */
.whitepaper-content .hljs-comment,
.whitepaper-content .hljs-quote {
  color: var(--color-neutral-500);
  font-style: italic;
}

.whitepaper-content .hljs-keyword,
.whitepaper-content .hljs-selector-tag,
.whitepaper-content .hljs-literal,
.whitepaper-content .hljs-doctag {
  color: var(--color-primary-400);
}

.whitepaper-content .hljs-string,
.whitepaper-content .hljs-regexp,
.whitepaper-content .hljs-addition {
  color: var(--color-secondary-400);
}

.whitepaper-content .hljs-number,
.whitepaper-content .hljs-symbol,
.whitepaper-content .hljs-bullet,
.whitepaper-content .hljs-meta {
  color: var(--color-secondary-500);
}

.whitepaper-content .hljs-title,
.whitepaper-content .hljs-section,
.whitepaper-content .hljs-name {
  color: var(--color-tertiary-400);
}

.whitepaper-content .hljs-attr,
.whitepaper-content .hljs-attribute,
.whitepaper-content .hljs-variable,
.whitepaper-content .hljs-template-variable,
.whitepaper-content .hljs-type,
.whitepaper-content .hljs-built_in,
.whitepaper-content .hljs-selector-class,
.whitepaper-content .hljs-selector-id {
  color: var(--color-tertiary-500);
}

.whitepaper-content .hljs-deletion {
  color: var(--color-error-400);
}

.whitepaper-content .hljs-emphasis {
  font-style: italic;
}

.whitepaper-content .hljs-strong {
  font-weight: 600;
}

.whitepaper-content blockquote {
  border-left: 1px solid var(--color-neutral-400);
  margin: var(--spacing-large) 0;
  padding-left: var(--spacing-medium);
  font-style: italic;
  color: var(--color-neutral-700);
}

.whitepaper-content .alert {
  border: 1px solid;
  border-radius: var(--radius-medium);
  padding: var(--spacing-medium) var(--spacing-large);
  margin: var(--spacing-large) 0;
}

.whitepaper-content .alert p {
  margin: 0;
}

.whitepaper-content .alert p + p {
  margin-top: var(--spacing-extra-small);
}

/* Outranks the \`.alert p { margin: 0 }\` reset above without !important. */
.whitepaper-content .alert .alert-title {
  font-family: var(--font-sans);
  font-weight: 600;
  margin-bottom: var(--spacing-extra-small);
}

.whitepaper-content .alert-info {
  background: var(--color-information-100);
  border-color: var(--color-information-300);
}

.whitepaper-content .alert-info .alert-title {
  color: var(--color-information-800);
}

.whitepaper-content .alert-success {
  background: var(--color-success-100);
  border-color: var(--color-success-300);
}

.whitepaper-content .alert-success .alert-title {
  color: var(--color-success-800);
}

.whitepaper-content .alert-warn {
  background: var(--color-alert-100);
  border-color: var(--color-alert-300);
}

.whitepaper-content .alert-warn .alert-title {
  color: var(--color-alert-800);
}

.whitepaper-content .alert-error {
  background: var(--color-error-100);
  border-color: var(--color-error-300);
}

.whitepaper-content .alert-error .alert-title {
  color: var(--color-error-800);
}

.whitepaper-content table {
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
  margin: var(--spacing-large) 0;
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  overflow: hidden;
  font-family: var(--font-sans);
  font-size: 0.9375rem;
  line-height: 1.5;
}

.whitepaper-content th,
.whitepaper-content td {
  padding: var(--spacing-extra-small) var(--spacing-small);
  text-align: left;
  border-bottom: 1px solid var(--color-neutral-200);
}

.whitepaper-content td {
  font-variant-numeric: tabular-nums;
}

.whitepaper-content tbody tr:last-child td {
  border-bottom: none;
}

.whitepaper-content tbody tr:hover td {
  background: var(--color-neutral-100);
}

.whitepaper-content th {
  background: var(--color-neutral-200);
  font-size: 0.6875rem;
  font-weight: 700;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--color-neutral-600);
}

.whitepaper-footer {
  text-align: center;
  color: var(--color-neutral-600);
  font-size: 0.8rem;
  padding: var(--spacing-large);
  border-top: 1px solid var(--color-neutral-300);
}

.mermaid-wrapper {
  margin: var(--spacing-large) 0;
  padding: var(--spacing-medium);
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  cursor: zoom-in;
  text-align: center;
}

.mermaid-wrapper .mermaid svg {
  max-width: 100%;
  height: auto;
}

.lightbox-overlay {
  display: none;
  position: fixed;
  inset: 0;
  z-index: var(--z-component-modal);
  background: var(--color-overlay);
  align-items: center;
  justify-content: center;
  padding: var(--spacing-large);
  cursor: zoom-out;
}

.lightbox-overlay.open {
  display: flex;
}

.lightbox-content {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 90vw;
  max-height: 90vh;
  overflow: auto;
  background: var(--color-neutral-000);
  border-radius: var(--radius-medium);
  padding: var(--spacing-medium);
}

.lightbox-overlay .lightbox-content svg {
  display: block;
  width: 100%;
  height: auto;
}

.appendix-entry {
  border: 1px solid var(--color-neutral-300);
  border-radius: var(--radius-medium);
  margin: var(--spacing-medium) 0;
  padding: 0 var(--spacing-medium);
  overflow: hidden;
}

.appendix-entry summary {
  display: flex;
  align-items: center;
  gap: var(--spacing-extra-small);
  margin: 0 calc(-1 * var(--spacing-medium));
  padding: var(--spacing-small) var(--spacing-medium);
  cursor: pointer;
  font-family: var(--font-sans);
  font-weight: 600;
  list-style: none;
  transition: background var(--transition-fast) ease-in-out;
}

.appendix-entry summary::-webkit-details-marker {
  display: none;
}

.appendix-entry summary:hover {
  background: var(--color-primary-100);
}

.appendix-entry summary:focus-visible {
  outline: 2px solid var(--color-primary-600);
  outline-offset: -2px;
}

.appendix-entry summary::after {
  content: "";
  flex-shrink: 0;
  margin-left: auto;
  width: 0.4375rem;
  height: 0.4375rem;
  border-right: 2px solid var(--color-neutral-700);
  border-bottom: 2px solid var(--color-neutral-700);
  transform: translateY(-25%) rotate(45deg);
  transition: transform var(--transition-fast) ease-in-out;
}

.appendix-entry[open] summary::after {
  transform: translateY(25%) rotate(225deg);
}

.appendix-entry summary .heading-number {
  color: var(--color-primary-600);
}

.appendix-entry[open] summary {
  border-bottom: 1px solid var(--color-neutral-300);
  margin-bottom: var(--spacing-small);
}

.appendix-entry[open] {
  padding-bottom: var(--spacing-small);
}

.appendix-entry > :last-child {
  margin-bottom: 0;
}

.lightbox-close {
  position: absolute;
  top: var(--spacing-large);
  right: var(--spacing-large);
  background: none;
  border: none;
  color: var(--color-neutral-000);
  font-size: 2rem;
  line-height: 1;
  cursor: pointer;
}

@media print {
  .whitepaper-toc,
  .lightbox-overlay {
    display: none;
  }
}

@media (prefers-reduced-motion: reduce) {
  .toc a,
  .appendix-entry summary,
  .appendix-entry summary::after,
  .changelog summary,
  .changelog summary::after {
    transition: none;
  }
}

  </style>
</head>
<body>
  <header class="whitepaper-header">
    <span class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="122" height="32" viewBox="0 0 122 32" fill="none" role="img" aria-label="mashay">
  <rect x="0" y="8" width="16" height="16" rx="3" fill="#0c7e96" />
  <text x="24" y="23" font-family="'Segoe UI', system-ui, sans-serif" font-size="22" font-weight="700" letter-spacing="0.2" fill="#ffffff">mashay</text>
</svg>
</span>
    <div class="header-eyebrow"><span class="status-badge">Draft</span></div>
    <h1>Streamlining Property Due Diligence</h1>
    <p class="subtitle">How automation reduces settlement risk for conveyancers.</p>
    <div class="doc-info-grid"><div class="doc-info-item"><span class="label">Version</span><span class="value">1.1</span></div><div class="doc-info-item"><span class="label">Date</span><span class="value">13 July 2026</span></div><div class="doc-info-item"><span class="label">Author</span><span class="value">Jane Researcher</span></div><div class="doc-info-item"><span class="label">Reviewers</span><span class="value">Jane Doe, John Smith</span></div><div class="doc-info-item"><span class="label">Classification</span><span class="value">Internal</span></div></div>
  </header>

  <div class="whitepaper-layout">
    <aside class="whitepaper-toc"><nav class="toc"><p class="toc-label">Contents</p><ul><li><a href="#introduction"><span class="toc-number">1</span> Introduction</a></li><li><a href="#the-problem"><span class="toc-number">2</span> The Problem</a></li><li><a href="#the-solution"><span class="toc-number">3</span> The Solution</a><ul><li><a href="#pipeline-overview"><span class="toc-number">3.1</span> Pipeline overview</a></li><li><a href="#benchmark-results"><span class="toc-number">3.2</span> Benchmark results</a></li></ul></li><li><a href="#conclusion"><span class="toc-number">4</span> Conclusion</a></li></ul></nav><nav class="toc toc-appendix"><p class="toc-label">Appendix</p><ul><li><a href="#methodology"><span class="toc-number">A</span> Methodology</a></li><li><a href="#glossary"><span class="toc-number">B</span> Glossary</a></li></ul></nav></aside>

    <main class="whitepaper">
      <details class="changelog"><summary>Revision History</summary><table><thead><tr><th>Version</th><th>Date</th><th>Description</th></tr></thead><tbody><tr><td>1.1</td><td>13 July 2026</td><td>Added benchmark automation script.</td></tr><tr><td>1.0</td><td>1 June 2026</td><td>Initial release.</td></tr></tbody></table></details>
      <article class="whitepaper-content">
        <h2 id="introduction"><span class="heading-number">1. </span>Introduction</h2>
<p>Manual due diligence workflows introduce risk and delay. This paper examines how automation addresses both.</p>
<h2 id="the-problem"><span class="heading-number">2. </span>The Problem</h2>
<ul>
<li>Fragmented data sources</li>
<li>Manual re-keying of search results</li>
<li>Inconsistent compliance checks</li>
</ul>
<h2 id="the-solution"><span class="heading-number">3. </span>The Solution</h2>
<p>Automated pipelines integrate directly with authoritative registries, producing results such as:</p>
<h3 id="pipeline-overview"><span class="heading-number">3.1. </span>Pipeline overview</h3>
<div class="mermaid-wrapper"><div class="mermaid">flowchart LR
    A[Solicitor requests search] --> B[Automated pipeline]
    B --> C[Authoritative registry]
    C --> D[Result returned in seconds]
</div></div>
<p>Benchmarks are produced by a small script that replays recorded search requests against both workflows:</p>
<div class="code-block"><div class="code-header"><span class="lang">ts</span><span class="filename">benchmark.ts</span></div><pre><code class="hljs language-ts"><span class="hljs-keyword">const</span> results = <span class="hljs-keyword">await</span> <span class="hljs-title class_">Promise</span>.<span class="hljs-title function_">all</span>(
  searchTypes.<span class="hljs-title function_">map</span>(<span class="hljs-function">(<span class="hljs-params"><span class="hljs-keyword">type</span></span>) =></span> <span class="hljs-title function_">runBenchmark</span>(<span class="hljs-keyword">type</span>)),
);
</code></pre></div>
<h3 id="benchmark-results"><span class="heading-number">3.2. </span>Benchmark results</h3>
<table>
<thead>
<tr>
<th>Search type</th>
<th>Manual time</th>
<th>Automated time</th>
</tr>
</thead>
<tbody>
<tr>
<td>Title search</td>
<td>15 min</td>
<td>30 sec</td>
</tr>
<tr>
<td>Company extract</td>
<td>10 min</td>
<td>20 sec</td>
</tr>
</tbody>
</table>
<blockquote>
<p>Automation doesn't replace judgment — it removes the busywork that gets in its way.</p>
</blockquote>
<div class="alert alert-info">
<p class="alert-title">Note</p>
<p>Figures above are based on internal benchmarking across a sample of 50 firms.</p>
</div>
<div class="alert alert-warn">
<p class="alert-title">Warning</p>
<p>Automated searches still require a human sign-off before settlement.</p>
</div>
<div class="alert alert-info">
<p class="alert-title">Important</p>
<p>Firms must retain audit trails for all automated searches per compliance requirements.</p>
</div>
<h2 id="conclusion"><span class="heading-number">4. </span>Conclusion</h2>
<p>Firms adopting automated search pipelines report measurable reductions in settlement risk and turnaround time. See <a href="#the-problem">The Problem</a> for the underlying pain points, or the <a href="#methodology">Methodology</a> appendix entry for benchmarking details.</p>
<h2 id="appendix">Appendix</h2>
<details class="appendix-entry"><summary><span class="heading-number">A. </span>Methodology</summary>
<p>Data was collected across 50 conveyancing firms between January and June 2026, comparing manual and automated workflows for equivalent search types.</p>
</details><details class="appendix-entry"><summary><span class="heading-number">B. </span>Glossary</summary>
<ul>
<li><strong>Settlement risk</strong> — the risk of delay or failure at property settlement due to incomplete or inaccurate information.</li>
<li><strong>Automated pipeline</strong> — a system that submits, retrieves, and validates search results without manual re-entry.</li>
</ul></details>
      </article>
    </main>
  </div>

  <footer class="whitepaper-footer">
    <p>Built with mashay</p>
  </footer>

  <div id="mermaid-lightbox" class="lightbox-overlay">
    <button type="button" class="lightbox-close" aria-label="Close">&times;</button>
    <div class="lightbox-content"></div>
  </div>

  <script src="https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.min.js"></script>
<script>mermaid.initialize({ startOnLoad: true, securityLevel: "strict" });</script>
  <script>
    document.addEventListener("click", function (e) {
      var wrapper = e.target.closest(".mermaid-wrapper");
      var overlay = document.getElementById("mermaid-lightbox");
      if (wrapper) {
        var svg = wrapper.querySelector("svg");
        if (svg) {
          var clone = svg.cloneNode(true);
          clone.removeAttribute("width");
          clone.removeAttribute("height");
          clone.removeAttribute("style");
          clone.style.width = "100%";
          clone.style.height = "auto";
          var content = overlay.querySelector(".lightbox-content");
          content.innerHTML = "";
          content.appendChild(clone);
          overlay.classList.add("open");
        }
        return;
      }
      if (e.target.closest(".lightbox-close") || e.target === overlay) {
        overlay.classList.remove("open");
      }
    });
    document.addEventListener("keydown", function (e) {
      if (e.key === "Escape") {
        document.getElementById("mermaid-lightbox").classList.remove("open");
      }
    });
  </script>
</body>
</html>
"
`;
